# cmtraceopen

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DSREGTOOL_INTEGRATION.md  README.md  SYNCML_WORKSPACE_PROPOSAL.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  playwright.screenshots.config.ts  vite.config.ts  windows_build_from_source.md
.cargo/: audit.toml  config.toml
.claude/: settings.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  no-ai-attribution-patterns.txt
cmprojectx-skeleton/: .gitignore  Cargo.toml  README.md
cmprojectx-skeleton/app/: Cargo.toml
cmprojectx-skeleton/app/src/: api_client.rs  main.rs
cmprojectx-skeleton/contract/: README.md  openapi.yaml
cmprojectx-skeleton/crates/api-types/: Cargo.toml
cmprojectx-skeleton/crates/api-types/src/: lib.rs
cmprojectx-skeleton/crates/parser/: README.md
cmprojectx-skeleton/service/Api/: Api.csproj  Program.cs
cmprojectx-skeleton/service/Core/: README.md
cmprojectx-skeleton/service/Store/: SnapshotStore.cs  Store.csproj
cmprojectx-skeleton/service/Sync/: GraphDeltaSync.cs  Sync.csproj
cmtrace-wasm/: Cargo.toml
cmtrace-wasm/src/: lib.rs
crates/cmtraceopen-parser/: Cargo.toml
crates/cmtraceopen-parser/src/: lib.rs
crates/cmtraceopen-parser/src/collector/: env_expand.rs  mod.rs  profile.rs  profile_data.json  types.rs
crates/cmtraceopen-parser/src/dsregcmd/: derive.rs  extended.rs  mod.rs  models.rs  parser.rs  rules.rs
crates/cmtraceopen-parser/src/error_db/: lookup.rs
crates/cmtraceopen-parser/src/esp/: correlation.rs  mod.rs  models.rs  normalize.rs  redaction.rs  reducer.rs  rules.rs  timeline.rs
crates/cmtraceopen-parser/src/intune/: download_stats.rs  event_tracker.rs  guid_registry.rs  ime_parser.rs  mod.rs  policy_parser.rs  timeline.rs
crates/cmtraceopen-parser/src/models/: log_entry.rs
crates/cmtraceopen-parser/src/parser/: burn.rs  cbs.rs  ccm.rs  cmtlog.rs  detect.rs  dhcp.rs  dism.rs  dns_debug.rs  dns_types.rs  iis_w3c.rs  intune_macos.rs  mod.rs  msi.rs  panther.rs  patchmypc_detection.rs  plain.rs  psadt.rs  registry.rs  reporting_events.rs  secureboot_log.rs  simple.rs  timestamped.rs  tracing_json.rs
crates/cmtraceopen-parser/tests/: esp_diagnostics.rs
crates/cmtraceopen-parser/tests/fixtures/esp/: bundle-live-equivalence.json  edge-cases.json  graph-cases.json  normalization-cases.json  scenario-cases.json
crates/common-wire/: Cargo.toml
crates/common-wire/src/: lib.rs
docs/: MVP-PLAN.md  esp-diagnostics-windows-vm-acceptance.md
e2e/: esp-diagnostics.spec.ts  smoke.spec.ts
reports/: latest-assets.csv  summary.json
screenshots/: README.md
scripts/: Install-CMTraceOpenBuildPrereqs.ps1  Launch-CMTraceOpen.ps1  Launch-CMTraceOpen.sh  ci-bundle-outputs.mjs  ci-bundle-outputs.test.mjs  ci-windows-provenance.mjs  ci-windows-provenance.test.mjs
src/: main.tsx  test-setup.ts
src-tauri/: Cargo.toml  build.rs  deny.toml  tauri.conf.json
src-tauri/benches/: intune_pipeline.rs  timeline.rs
src-tauri/capabilities/: default.json
src-tauri/examples/: profile_folder.rs
src-tauri/icons/: icon.icns
src-tauri/installer/: disable-update-checks.nsh  package.signed.json  set-disable-update-checks-policy.ps1
src-tauri/src/: app_logging.rs  error.rs  graph_api.rs  ipc_bridge.rs  lib.rs  menu.rs  process_util.rs
src-tauri/src/clustering/: chunker.rs  cluster.rs  embedder.rs  incremental.rs  mod.rs  model_manager.rs  models.rs
src-tauri/src/collector/: artifacts.rs  engine.rs  manifest.rs  mod.rs  profile.rs
src-tauri/src/commands/: app_config.rs  bundle_ops.rs  clustering.rs  collector.rs  deployment.rs  dns_dhcp.rs  dsregcmd.rs  esp_diagnostics.rs  file_association.rs  file_ops.rs  filter.rs  fonts.rs  graph_api.rs  intune.rs  intune_bundle.rs  intune_diagnostics.rs  known_sources.rs  macos_diag.rs  markers.rs  mod.rs  parsing.rs  registry_ops.rs  reveal.rs  sysmon.rs  system_preferences.rs  timeline.rs
src-tauri/src/dsregcmd/: connectivity.rs  derive.rs  event_logs.rs  mod.rs  models.rs  parser.rs  registry.rs  rules.rs
src-tauri/src/error_db/: codes.rs  lookup.rs
src-tauri/src/esp/: archive.rs  bundle.rs  discovery.rs  event_logs.rs  live_session.rs  mod.rs  process.rs  process_win32.rs  registry.rs  relaunch.rs  remediation.rs  session.rs  system.rs  tailing.rs
src-tauri/src/event_log/: commands.rs  live.rs  mod.rs  models.rs  parser.rs
src-tauri/src/graph_api/: client.rs  correlation.rs  esp.rs  models.rs
src-tauri/src/intune/: download_stats.rs  event_tracker.rs  eventlog_win32.rs  evtx_parser.rs  guid_registry.rs  ime_parser.rs  mod.rs  models.rs  policy_parser.rs  timeline.rs
src-tauri/src/intune/anomaly/: cross_source.rs  escalation.rs  flow_model.rs  knowledge_base.rs  mod.rs  models.rs  remediation.rs  scoring.rs  statistical.rs
src-tauri/src/macos_diag/: defender.rs  environment.rs  mod.rs  models.rs  packages.rs  profiles.rs  unified_log.rs
src-tauri/src/models/: log_entry.rs
src-tauri/src/parser/: burn.rs  cbs.rs  ccm.rs  cmtlog.rs  detect.rs  dhcp.rs  dism.rs  dns_audit.rs  dns_debug.rs  etl.rs  iis_w3c.rs  intune_macos.rs  mod.rs  msi.rs  panther.rs  plain.rs  psadt.rs  registry.rs  reporting_events.rs  simple.rs  timestamped.rs
src-tauri/src/secureboot/: log_parser.rs  mod.rs  rules.rs  scanner.rs  scripts.rs  stage.rs
src-tauri/src/state/: app_state.rs
src-tauri/src/sysmon/: evtx_parser.rs  mod.rs  models.rs
src-tauri/src/timeline/: builder.rs  correlation.rs  incidents.rs  mod.rs  models.rs  query.rs  store.rs
src-tauri/src/watcher/: tail.rs
src-tauri/tests/: anomaly_integration.rs  bench_parse.rs  ccm_psadt_success.rs  clustering_tests.rs  cmtlog_parser.rs  dns_audit_real.rs  esp_diagnostics_sources.rs  graph_esp_diagnostics.rs  parser_expanded_corpus.rs  parser_regression_corpus.rs  security_dependencies.rs  sysmon_parser.rs  timeline_integration.rs
src-tauri/tests/common/: mod.rs
src-tauri/tests/fixtures/cmtlog/: basic.cmtlog
src-tauri/tests/fixtures/graph/esp/: orchestration-cases.json
(+405 files in other folders)
