[package]
name = "cmtrace-wasm"
version = "1.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cmtrace-open = { path = "../src-tauri", default-features = false, package = "cmtrace-open" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde_json = "1"
console_error_panic_hook = "0.1"
