[package]
name = "cmtraceopen-parser"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Pure-Rust log-format parser, error-code database, and entry models for CMTrace Open. Targets native and wasm32."
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"
log = "0.4"
thiserror = "2"
base64 = "0.22"
