[package]
name = "common-wire"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Shared request/response DTOs and protocol types for the CMTrace Open platform (agent ↔ api-server ↔ web viewer)."
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
# cmtraceopen-parser = { path = "../cmtraceopen-parser" }  # Uncomment when DTOs re-export LogEntry
